--- a/App/wwwroot/dashboard.html
+++ b/App/wwwroot/dashboard.html
@@ -2,9 +2,30 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>控制台</title>
+    <button onclick="window.location.href='/'" style="position:absolute;left:24px;top:24px;">返回首页</button>
+
+    <style>
+        th, td {
+            border: 1px solid #ccc;
+            padding: 8px 12px;
+            text-align: center;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        h2 {
+            color: #333;
+        }
+    </style>
+    <link rel="stylesheet" href="table.css">
 </head>
 <body>
-    dashboard
+    <a href="/submit-task.html">提交观测任务</a>
+    <script src="app.js"></script>
+    <script src="dashboard.js"></script>
+
 </body>
 </html>
