--- a/App/wwwroot/index.html
+++ b/App/wwwroot/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <div id="app"></div>
+    <script src="routes.js"></script>
+    <script src="auth.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
