--- a/App/wwwroot/login.html
+++ b/App/wwwroot/login.html
@@ -11,14 +11,10 @@
         <input type="password" id="password" placeholder="密码" autocomplete="current-password" required />
         <button type="submit">登录</button>
     </form>
-
-    <!--
-        <input id="username" placeholder="用户名" />
-    <input id="password" type="password" placeholder="密码" />
-    <button onclick="login()">登录</button>
     <p id="error" style="color:red;"></p>
-        -->
 
+    <script src="routes.js"></script>
+    <script src="auth.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
