create js css folder

--- a/App/wwwroot/dashboard.html
+++ b/App/wwwroot/dashboard.html
@@ -20,7 +20,7 @@
             color: #333;
         }
     </style>
-    <link rel="stylesheet" href="table.css">
+    <link rel="stylesheet" href="css/table.css">
 </head>
 <body>
     <div id="user-header">
@@ -31,10 +31,10 @@
     
     <a href="/submit-task.html">提交观测任务</a>
     
-    <script src="routes.js"></script>
-    <script src="auth.js"></script>
-    <script src="app.js"></script>
-    <script src="dashboard.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/dashboard.js"></script>
     <script>
         // 用户页面特定的初始化
         document.addEventListener('DOMContentLoaded', async () => {
