--- a/App/wwwroot/admin-dashboard.html
+++ b/App/wwwroot/admin-dashboard.html
@@ -18,21 +18,26 @@
             color: #333;
         }
     </style>
-    <link rel="stylesheet" href="table.css">
+    <link rel="stylesheet" href="css/table.css">
 </head>
 <body>
     <div id="admin-header">
         <h2>管理员控制台</h2>
         <div id="user-info"></div>
+        <div>
+            <button onclick="window.location.href='/'" >返回首页</button>
+        </div>
+        <div>
         <button onclick="logout()">登出</button>
+        </div>
     </div>
 
     <div class="auto-table" data-api="/api/telescopes/getalltelescopes" data-title="全部望远镜"></div>
     <div class="auto-table" data-api="/api/observations/getallobservationtask" data-title="全部待观测任务"></div>
     
-    <script src="routes.js"></script>
-    <script src="auth.js"></script>
-    <script src="table.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/table.js"></script>
     <script>
         // 管理员页面特定的初始化
         document.addEventListener('DOMContentLoaded', async () => {
