--- a/App/wwwroot/login.html
+++ b/App/wwwroot/login.html
@@ -13,8 +13,8 @@
     </form>
     <p id="error" style="color:red;"></p>
 
-    <script src="routes.js"></script>
-    <script src="auth.js"></script>
-    <script src="app.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
