--- a/App/wwwroot/submit-task.html
+++ b/App/wwwroot/submit-task.html
@@ -30,7 +30,7 @@
 <body>
     <h1>提交观测任务</h1>
     <div>
-        <button onclick="window.location.href='/'" style="position:absolute;left:24px;top:24px;">返回首页</button>
+        <button onclick="window.location.href='/'" >返回首页</button>
     </div>
     <div style="height: 24px;"></div>
     <div style="display: flex; flex-direction: row; gap: 24px; flex-wrap: wrap;">
@@ -147,8 +147,8 @@
 
     <p id="result" style="margin-top:20px;"></p>
 
-    <script src="app.js"></script>
-    <script src="submit-task.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/submit-task.js"></script>
     <script>
         // 动态加载望远镜列表
         document.addEventListener('DOMContentLoaded', function () {
